@@ -11,8 +11,6 @@ import com.yahoo.component.chain.dependencies.Provides;
 import org.junit.jupiter.api.Test;
 
 import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.HashSet;
 import java.util.Iterator;
 import java.util.List;
@@ -90,15 +88,15 @@ public class ChainBuilderTest {
     @Test
     void testPhaseAndSearcher() {
         ChainBuilder depHandler = newChainBuilder();
-        depHandler.addPhase(new Phase("phase1", set("phase2"), Collections.<String>emptySet()));
+        depHandler.addPhase(new Phase("phase1", set("phase2"), Set.of()));
         depHandler.addPhase(new Phase("phase2", set("phase3"), set("phase1")));
-        depHandler.addPhase(new Phase("phase3", Collections.<String>emptySet(), set("phase2", "phase1")));
+        depHandler.addPhase(new Phase("phase3", Set.of(), set("phase2", "phase1")));
         ChainedComponent first = new First();
         ChainedComponent second = new Second();
 
         depHandler.addComponent(first);
         depHandler.addComponent(second);
-        assertEquals(depHandler.orderNodes().components(), Arrays.asList(first, second));
+        assertEquals(depHandler.orderNodes().components(), List.of(first, second));
 
     }
 
@@ -114,7 +112,7 @@ public class ChainBuilderTest {
         chainBuilder.addComponent(c);
         chainBuilder.addComponent(a2);
 
-        assertEquals(Arrays.asList(a1, c, a2), chainBuilder.orderNodes().components());
+        assertEquals(List.of(a1, c, a2), chainBuilder.orderNodes().components());
     }
 
     private ChainBuilder newChainBuilder() {
@@ -122,7 +120,7 @@ public class ChainBuilderTest {
     }
 
     private Set<String> set(String... strings) {
-        return new HashSet<>(Arrays.asList(strings));
+        return new HashSet<>(List.of(strings));
     }
 
     @Before("phase1")
@@ -172,9 +170,9 @@ public class ChainBuilderTest {
 
     private ChainBuilder createDependencyHandler() {
         ChainBuilder chainBuilder = newChainBuilder();
-        chainBuilder.addPhase(new Phase("phase1", Collections.<String>emptySet(), Collections.<String>emptySet()));
-        chainBuilder.addPhase(new Phase("phase2", Collections.<String>emptySet(), Collections.<String>emptySet()));
-        chainBuilder.addPhase(new Phase("phase3", Collections.<String>emptySet(), Collections.<String>emptySet()));
+        chainBuilder.addPhase(new Phase("phase1", Set.of(), Set.of()));
+        chainBuilder.addPhase(new Phase("phase2", Set.of(), Set.of()));
+        chainBuilder.addPhase(new Phase("phase3", Set.of(), Set.of()));
         return chainBuilder;
     }
 
