@@ -13,8 +13,8 @@ import com.yahoo.prelude.query.parser.Tokenizer;
 import org.junit.jupiter.api.Test;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
+import java.util.Set;
 
 import static com.yahoo.prelude.query.parser.Token.Kind.COLON;
 import static com.yahoo.prelude.query.parser.Token.Kind.COMMA;
@@ -283,7 +283,7 @@ public class TokenizerTestCase {
         sd.addIndex(index2);
 
         IndexFacts facts = new IndexFacts(new IndexModel(sd));
-        IndexFacts.Session session = facts.newSession(Collections.emptySet(), Collections.emptySet());
+        IndexFacts.Session session = facts.newSession(Set.of(), Set.of());
         Tokenizer tokenizer = new Tokenizer(new SimpleLinguistics());
         List<?> tokens = tokenizer.tokenize("normal a:b (normal testexact1:/,%#%&+-+ ) testexact2:ho_/&%&/()/aa*::*& b:c", "default", session);
         // tokenizer.print();
@@ -328,7 +328,7 @@ public class TokenizerTestCase {
 
         IndexFacts facts = new IndexFacts(new IndexModel(sd));
         Tokenizer tokenizer = new Tokenizer(new SimpleLinguistics());
-        IndexFacts.Session session = facts.newSession(Collections.emptySet(), Collections.emptySet());
+        IndexFacts.Session session = facts.newSession(Set.of(), Set.of());
         List<?> tokens = tokenizer.tokenize("normal a:b (normal testexact1:/,%#%&+-+ ) testexact2:ho_/&%&/()/aa*::*&", session);
         assertEquals(new Token(WORD, "normal"), tokens.get(0));
         assertEquals(new Token(SPACE, " "), tokens.get(1));
@@ -365,7 +365,7 @@ public class TokenizerTestCase {
 
         IndexFacts facts = new IndexFacts(new IndexModel(sd));
         Tokenizer tokenizer = new Tokenizer(new SimpleLinguistics());
-        IndexFacts.Session session = facts.newSession(Collections.emptySet(), Collections.emptySet());
+        IndexFacts.Session session = facts.newSession(Set.of(), Set.of());
         List<?> tokens = tokenizer.tokenize("normal a:b (normal testexact1:/,%#%&+-+ ) testexact2:ho_/&%&/()/aa*::*", session);
         assertEquals(new Token(WORD, "normal"), tokens.get(0));
         assertEquals(new Token(SPACE, " "), tokens.get(1));
@@ -402,7 +402,7 @@ public class TokenizerTestCase {
 
         IndexFacts facts = new IndexFacts(new IndexModel(sd));
         Tokenizer tokenizer = new Tokenizer(new SimpleLinguistics());
-        IndexFacts.Session session = facts.newSession(Collections.emptySet(), Collections.emptySet());
+        IndexFacts.Session session = facts.newSession(Set.of(), Set.of());
         List<?> tokens = tokenizer.tokenize("normal a:b (normal testexact1:!/%#%&+-+ ) testexact2:ho_/&%&/()/aa*::*&b:", session);
         assertEquals(new Token(WORD, "normal"), tokens.get(0));
         assertEquals(new Token(SPACE, " "), tokens.get(1));
@@ -439,7 +439,7 @@ public class TokenizerTestCase {
         sd.addIndex(index2);
 
         IndexFacts indexFacts = new IndexFacts(new IndexModel(sd));
-        IndexFacts.Session facts = indexFacts.newSession(Collections.emptySet(), Collections.emptySet());
+        IndexFacts.Session facts = indexFacts.newSession(Set.of(), Set.of());
 
         Tokenizer tokenizer = new Tokenizer(new SimpleLinguistics());
         List<?> tokens = tokenizer.tokenize("normal a:b (normal testexact1:foo) testexact2:bar", facts);
