@@ -18,7 +18,6 @@ import java.net.URISyntaxException;
 import java.net.URL;
 import java.nio.file.Path;
 import java.time.Duration;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.Map;
 import java.util.Optional;
@@ -26,7 +25,6 @@ import java.util.OptionalDouble;
 import java.util.OptionalInt;
 
 import static ai.vespa.feed.client.FeedClientBuilder.Compression.auto;
-import static ai.vespa.feed.client.FeedClientBuilder.Compression.none;
 
 /**
  * Parses command line arguments
@@ -139,7 +137,7 @@ class CliArguments {
 
     Map<String, String> headers() throws CliArgumentsException {
         String[] rawArguments = arguments.getOptionValues(HEADER_OPTION);
-        if (rawArguments == null) return Collections.emptyMap();
+        if (rawArguments == null) return Map.of();
         Map<String, String> headers = new HashMap<>();
         for (String rawArgument : rawArguments) {
             if (rawArgument.startsWith("\"") || rawArgument.startsWith("'")) {
@@ -152,7 +150,7 @@ class CliArguments {
             if (colonIndex == -1) throw new CliArgumentsException("Invalid header: '" + rawArgument + "'");
             headers.put(rawArgument.substring(0, colonIndex), rawArgument.substring(colonIndex + 1).trim());
         }
-        return Collections.unmodifiableMap(headers);
+        return Map.copyOf(headers);
     }
 
     boolean sslHostnameVerificationDisabled() { return has(DISABLE_SSL_HOSTNAME_VERIFICATION_OPTION); }
